[package]
name = "cli-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
colour = "0.6.0"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
ureq = "2.4.0"
